Update kubernetes and admin readme